--- a/stacc-snowflake/src/components/progressIndicator.module.css
+++ b/stacc-snowflake/src/components/progressIndicator.module.css
@@ -1,4 +1,4 @@
 .progress {
 	width: fit-content;
-	margin: auto;
+	margin: 32px auto 32px auto;
 }
